@startuml

title __BUNCO's Class Diagram__\n

  namespace bunco {
    class bunco.FactoryBunco {
        - nbDesBunco : int
        - nbToursBunco : int
        # creerDes()
        # creerJeu()
        # strategie()
    }
  }
  

  namespace bunco {
    class bunco.StrategieBunco {
        + calculerLeVainqueur()
        + calculerScoreTour()
    }
  }
  

  bunco.FactoryBunco -up-|> framework.Factory
  bunco.StrategieBunco -up-|> framework.Strategie


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
